fix: increased size globally to make the font more readable

--- a/app/globals.css
+++ b/app/globals.css
@@ -103,6 +103,9 @@
 }
 
 @layer base {
+  html {
+    font-size: 18px;
+  }
   * {
     @apply border-border outline-ring/50;
   }
